--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-Hello world!
+<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
+<div class="pure-g">
+    <p>Hello world!</p>
+</div>
