--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
 <div class="pure-g">
-    <p>Hello world!</p>
+    <div class="pure-u-1-3"><p>Hello world!</p></div>
 </div>
